2012-11-19  Dimitri Glazkov  <dglazkov@chromium.org>

        [garden-o-matic] Switch frontend to use the gardeningserver.
        https://bugs.webkit.org/show_bug.cgi?id=102712

        Reviewed by Dirk Pranke.

        Instead of serving garden-o-matic frontend as file, we now serve it from the gardening server. This enables
        using garden-o-matic in a Chrome OS device, with a separate machine as a headless server.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/garden-o-matic.html: Changed CSP policy to use 'self'.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/checkout.js: Removed now-unnecessary references to kLocalServerURL.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/checkout_unittests.js: Tweaked the test expectation.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/config.js: Removed kLocalServerURL.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/controllers.js: Spuriously updated the name of the webkit-patch command.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/results.js: Removed kLocalServerURL.
        * Scripts/webkitpy/tool/servers/gardeningserver.py: Changed to use the new launch URL.

2012-11-19  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r135172.
        http://trac.webkit.org/changeset/135172
        https://bugs.webkit.org/show_bug.cgi?id=102710

        Broke some WebKit2 api tests :( (Requested by japhet on
        #webkit).

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::updateForCommittedLoad):

2012-11-19  Dimitri Glazkov  <dglazkov@chromium.org>

        [garden-o-matic] Enable serving garden-o-matic with gardeningserver.
        https://bugs.webkit.org/show_bug.cgi?id=102703

        Reviewed by Ojan Vafai.
